feat(landing): add pre-registration API
